@@ -406,7 +406,7 @@ function admin_menu_output() {
     module_load_include('inc', 'admin_menu');
 
     // Add administration menu.
-    $content['menu'] = admin_menu_links_menu(menu_tree_all_data('management'));
+    $content['menu'] = admin_menu_links_menu(admin_menu_tree('management'));
     $content['menu']['#theme'] = 'admin_menu_links';
     // Ensure the menu tree is rendered between the icon and user links.
     $content['menu']['#weight'] = 0;
