@@ -6,6 +6,7 @@ Admin Menu x.x-x.x, xxxx-xx-xx
 
 Admin Menu 7.x-3.x, xxxx-xx-xx
 ------------------------------
+#420816 by smk-ka, sun: Added merging of menu trees containing dynamic paths.
 #551484 by sun: Fixed stale hook_admin_menu_output_alter() docs.
 #730156 by sun: Fixed Administration views.
 by sun: Fixed tests and minor admin_menu_toolbar styling issues.
